Update memory migration plan and agent guidance
Document the one-time migration to Linux-like paged memory, including lazy page commit, committed-page limits, software TLBs, configurable page sizes, and HugeTLB pool behavior. Update agent Gradle guidance for jdk.internal.misc.Unsafe access and clarify that the long-term MemorySegment backend should not be kept.

Assisted-by: codex:gpt-5.5